# shared-libs-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_REVIEW.md  LICENSE  PROJECT_REVIEW.md  README.md  REVIEW_SUMMARY.md  SECURITY.md  coverage.json  pyproject.toml
.claude/agents/: shared-library-architect.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml  security-audit.yml
benchmarks/: benchmark.py  northstar.py
docs/: HNSW_PARTITIONING_STRATEGY.md  OPERATIONS.md  README.md  installation-guide.md  vector-mgmt-architecture.md
docs/diagrams/: architecture.d2  partitioning-strategies.d2  query-flow.d2  reindex-atomic-swap.d2  scale-decision-tree.d2
edgeproc_core/: __init__.py
edgeproc_core/errors/: __init__.py  canonical_error.py  raw.py  registry.py  starter_pack.py  types.py
edgeproc_core/vector_mgmt/: __init__.py  testing.py
edgeproc_core/vector_mgmt/core/: __init__.py  index_manager.py
edgeproc_core/vector_mgmt/partitioning/: __init__.py  strategies.py
examples/: README.md  __init__.py  basic_usage.py  canonical_errors.py  composite_partition_key.py  custom_partition_key.py  run_loop.sh  two_tier_partition.py
scripts/: check_coverage_claim.py
shared_libs_python/: __init__.py
shared_libs_python/core/: __init__.py  index_manager.py  types.py
shared_libs_python/errors/: __init__.py  canonical_error.py  registry.py  starter_pack.py  types.py
shared_libs_python/partitioning/: __init__.py  strategies.py
shared_libs_python/vector_mgmt/: __init__.py  testing.py
shared_libs_python/vector_mgmt/core/: __init__.py  index_manager.py  types.py
shared_libs_python/vector_mgmt/indexing/: __init__.py
shared_libs_python/vector_mgmt/partitioning/: __init__.py  strategies.py
shared_libs_python/vector_mgmt/reindex/: __init__.py
tests/: __init__.py  conftest.py  test_benchmark_claims.py  test_changelog_provenance.py  test_docs_contract.py  test_errors_canonical.py  test_errors_classify.py  test_errors_define.py  test_errors_describe.py  test_errors_problem_details.py  test_errors_raw.py  test_errors_starter_pack.py  test_examples_run.py  test_in_memory_index.py  test_index_manager.py  test_northstar_docs.py  test_partitioning_strategies.py  test_tenant_isolation.py  test_types.py  test_version.py  test_workflow_security.py
