[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgeproc-core"
version = "0.2.1"
description = "Vector partitioning and generic partition-key management for Python."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Harish Seshadri", email = "harish.seshadri@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
pgvector = [
    "pgvector>=0.5.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "xenon>=0.9.0",
    "radon>=6.0.0",
    "poethepoet>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "xenon>=0.9.0",
    "radon>=6.0.0",
    "poethepoet>=0.48.0",
]

[project.urls]
Homepage = "https://github.com/hseshadr/shared-libs-python"
Documentation = "https://github.com/hseshadr/shared-libs-python#readme"
Repository = "https://github.com/hseshadr/shared-libs-python"
Issues = "https://github.com/hseshadr/shared-libs-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["edgeproc_core"]

[tool.hatch.build.targets.sdist]
# Lean sdist: distribution sources only. The ~5 MB of rendered PNG diagrams under
# docs/, the resolved uv.lock, and dev-only tooling (.github, .claude, CLAUDE.md)
# live in the git repo — they have no place in the published tarball.
only-include = [
    "edgeproc_core",
    "tests",
    "examples",
    "benchmarks",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "SECURITY.md",
    "CONTRIBUTING.md",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C901", "B", "UP", "SIM", "N", "RUF", "ASYNC", "S", "PL"]
ignore = ["ARG002", "S101", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "C901", "PLR0911", "PLR0912"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=edgeproc_core",
    # Branch coverage, not merely statement coverage: the README publishes a
    # branch figure, so the gate must measure the thing the README claims.
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
source = ["edgeproc_core"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90.0

[tool.poe.tasks]
lint = "ruff check edgeproc_core/ tests/ scripts/"
fmt = "ruff format edgeproc_core/ tests/ scripts/"
fmt-check = "ruff format --check edgeproc_core/ tests/ scripts/"
typecheck = "mypy --strict edgeproc_core/ scripts/"
complexity = "xenon --max-absolute A --max-modules A --max-average A edgeproc_core/"
test = "pytest"
# Runs after `test` so it reads the coverage.xml that run just wrote: the README's
# published figures must match the measurement, not a stale memory of it.
coverage-claim = "python scripts/check_coverage_claim.py"
# The canonical quality gate (house standard §3). Mirrors CI exactly, both directions.
gate = ["lint", "fmt-check", "typecheck", "complexity", "test", "coverage-claim"]
